# zordle

./: .gitignore  .gitmodules  Cargo.toml  README.md
circuits/: Cargo.toml
circuits/src/: lib.rs  main.rs  wasm.rs
circuits/src/wordle/: wordle.rs
circuits/src/wordle/wordle/: dict.rs  is_zero.rs  table.rs
client/: package.json
client/src/: App.tsx  test-worker.ts
src/: lib.rs  main.rs
src/wordle/: wordle.rs
src/wordle/wordle/: dict.json  foo.json  table.rs  utils.rs
