[package]
name = "halowordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wordle"
path = "src/lib.rs"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { path = "/Users/nibnalin/Documents/halo2/halo2_proofs" }
plotters = { version = "0.3.0", optional = true }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
