[package]
name = "halowordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wordle"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs = { path = "/Users/nibnalin/Documents/halo2/halo2_proofs" }
plotters = { version = "0.3.0", optional = true }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0"}
